fix pillbox container size on mobile and big web

--- a/scss/partials/_topic_growth.scss
+++ b/scss/partials/_topic_growth.scss
@@ -5,9 +5,17 @@ div.section-container{
     border: 1px solid $oc_gray_2;
     margin-top: 10px;
     margin-bottom: 10px;
-    margin-left: -23px;
-    width: calc(100% + 46px);
     text-align: center;
+
+    @include big_web(){
+        margin-left: -53px;
+        width: calc(100% + 106px);
+    }
+
+    @include mobile(){
+        margin-left: -23px;
+        width: calc(100% + 46px);
+    }
 
     @include pillbox($oc_blue_regular);
   }
